adding new atribute, fix package.json

--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "npx tsc -p src/ && npm run copy:assets",
     "serve": "lite-server -c=bs-config.json",
     "prestart": "npm run build",
-    "copy:assets": "cpx src/app/**/*.{html,css} src/dist/app",
-    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "copy:assets:watch": "cpx \"src/app/**/*.{html,css}\" src/dist/app -w",
+    "copy:assets": "cpx \"src/app/**/*.{html,css}\" src/dist/app",
+    "watch:all": "concurrently \"tsc -p src/ -w\" \"cpx \\\"src/app/**/*.{html,css}\\\" src/dist/app -w\"",
+    "start": "concurrently \"npm run watch:all\" \"npm run serve\"",
     "pretest": "npm run build",
+    "watch:assets": "onchange 'src/app/**/*.{html,css}' -- npm run copy:assets",
     "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
     "pretest:once": "npm run build",
-    "build:watch": "concurrently \"tsc -p src/ -w\" ",
+    "build:watch": "concurrently \"tsc -p src/ -w\" \"cpx src/app/**/*.{html,css} src/dist/app -w\"",
     "build:upgrade": "tsc",
     "serve:upgrade": "http-server",
     "build:aot": "ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
